Ungroup in Node editor crash Blender #55462

Closed
opened 2018-06-13 00:44:45 +02:00 by Cenek Strichel · 7 comments

System Information
W10 64b

Blender Version
7c75c2d

Short description of error
Blender crash everytime I want to ungroup shader

Exact steps for others to reproduce the error

  1. open crash.blend
  2. select cube
  3. ungroup shader in "kamuflaz texture" group
  4. crash
**System Information** W10 64b **Blender Version** 7c75c2d **Short description of error** Blender crash everytime I want to ungroup shader **Exact steps for others to reproduce the error** 1) open [crash.blend](https://archive.blender.org/developer/F3680012/crash.blend) 2) select cube 3) ungroup shader in "kamuflaz texture" group 4) crash
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, crash in master, worked in 2.79b, having a closer look now

Can confirm, crash in master, worked in 2.79b, having a closer look now
Sergey Sharybin was assigned by Philipp Oeser 2018-06-13 11:13:51 +02:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

bisected down to 1cddab18de

1  action_groups_clear_tempflags     action.c             392   0x251694e 
2  action_move_fcurves_by_basepath   anim_sys.c           442   0x251bac3 
3  BKE_animdata_separate_by_basepath anim_sys.c           546   0x251be34 
4  node_group_ungroup                node_group.c         263   0x19133ab 
5  node_group_ungroup_exec           node_group.c         368   0x191376e 

in 1cddab18de BKE_id_copy_ex changed to not NULLify r_newid anymore (returning early out when source is NULL)

So when this happens with NULL action, the returned action is not NULL anymore (but garbage pointer created in BKE_action_copy), leading to problems later...

P726 is quick fix (but not sure returnpointer should always be NULL when source is NULL? or check LIB_ID_CREATE_NO_ALLOCATE as well?)

@Sergey: mind having a look?

bisected down to 1cddab18de ``` 1 action_groups_clear_tempflags action.c 392 0x251694e 2 action_move_fcurves_by_basepath anim_sys.c 442 0x251bac3 3 BKE_animdata_separate_by_basepath anim_sys.c 546 0x251be34 4 node_group_ungroup node_group.c 263 0x19133ab 5 node_group_ungroup_exec node_group.c 368 0x191376e ``` in 1cddab18de `BKE_id_copy_ex` changed to not NULLify `r_newid` anymore (returning early out when source is NULL) So when [this ](https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/space_node/node_group.c;67e8c1e1c7cfbb000de903c9c4e83874adba411f$260) happens with NULL action, the returned action is not NULL anymore (but garbage pointer created in BKE_action_copy), leading to problems later... [P726](https://archive.blender.org/developer/P726.txt) is quick fix (but not sure returnpointer should **always** be NULL when source is NULL? or check LIB_ID_CREATE_NO_ALLOCATE as well?) @Sergey: mind having a look?

This issue was referenced by 693721cc7e

This issue was referenced by 693721cc7e7d617eeb1c2198a6628bb14f731d6b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55462
No description provided.