Fix T55462: Ungroup in Node editor crash Blender

If ID doesn't want to do user counting it shouldn't be in main.